--- a/css/style.css
+++ b/css/style.css
@@ -72,37 +72,10 @@ h1{
   left: 18px;
   color: #003049;
 }
-
-.heart {
-  background-color: #d62828;
-  display: inline-block;
-  height: 30px;
-  margin: 0 10px;
-  position: relative;
-  top: 110px;
-  left: 105px;
-  transform: rotate(-45deg);
-  width: 30px;
-}
-
-.heart:before,
-.heart:after {
-  content: "";
-  background-color: #d62828;
-  border-radius: 50%;
-  height: 30px;
-  position: absolute;
-  width: 30px;
-}
-
-.heart:before {
-  top: -15px;
-  left: 0;
-}
-
-.heart:after {
-  left: 15px;
-  top: 0;
+.heart{
+  height: 40px;
+  width: auto;
+  margin-left: 90px;
 }
 .front {
   position: absolute;
